<resources>
    <string name="app_name">TESLA Time Synchronization App</string>
    <string name="hint_ip_address">IP Address</string>
    <string name="info_last_synchronization">Last Synchronization:</string>
    <string name="info_delay">Delay:</string>
    <string name="button_synchronize">Synchronize</string>
    <string name="info_empty">-</string>
    <string name="button_public_key_file_chooser">Select file</string>
    <string name="dummy_task_name">Task name</string>
    <string name="dummy_task_result">Task result</string>
    <string name="info_successful">Successful synchronization:</string>
</resources>
